Adding more stuff, matrix stuff

--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,10 @@ description: Please see the README on GitHub at <https://github.com/githubuser/r
 
 dependencies:
   - base >= 4.7 && < 5
+  - containers
+  - text
+  - split
+  - array
 
 library:
   source-dirs: src
