--- a/package.yaml
+++ b/package.yaml
@@ -19,12 +19,18 @@ extra-source-files:
 # common to point users to the README.md file.
 description: Please see the README on GitHub at <https://github.com/githubuser/ray-tracer-challenge#readme>
 
+default-extensions:
+  - BlockArguments
+  - OverloadedStrings
+  - StrictData
+
 dependencies:
   - base >= 4.7 && < 5
   - containers
   - text
   - split
   - array
+  - parallel
 
 library:
   source-dirs: src
